compiler/lume_parse/src/snapshots/lume_parse__tests__construction_snapshots@fields.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"Foo { bar: 0, baz: 1 };\")"
---
SOURCE_FILE@0..17
  EXPR_STMT@0..17
    CONSTRUCT_EXPR@0..16
      PATH@0..3
        PATH_TYPE@0..3
          IDENT@0..3 "Foo"
      LEFT_BRACE@3..4 "{"
      FIELD@4..9
        NAME@4..7
          IDENT@4..7 "bar"
        COLON@7..8 ":"
        VALUE@8..9
          LITERAL@8..9
            INTEGER_LIT@8..9 "0"
      COMMA@9..10 ","
      FIELD@10..15
        NAME@10..13
          IDENT@10..13 "baz"
        COLON@13..14 ":"
        VALUE@14..15
          LITERAL@14..15
            INTEGER_LIT@14..15 "1"
      RIGHT_BRACE@15..16 "}"
    SEMICOLON@16..17 ";"
