compiler/lume_parse/src/snapshots/lume_parse__tests__construction_snapshots@missing_comma.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"Foo { bar: 0 baz };\")"
---
SOURCE_FILE@0..14
  EXPR_STMT@0..14
    CONSTRUCT_EXPR@0..13
      PATH@0..3
        PATH_TYPE@0..3
          IDENT@0..3 "Foo"
      LEFT_BRACE@3..4 "{"
      FIELD@4..9
        NAME@4..7
          IDENT@4..7 "bar"
        COLON@7..8 ":"
        VALUE@8..9
          LITERAL@8..9
            INTEGER_LIT@8..9 "0"
      IDENT@9..12 "baz"
      RIGHT_BRACE@12..13 "}"
    SEMICOLON@13..14 ";"

expected COMMA@13..16
