compiler/lume_parse/src/snapshots/lume_parse__tests__construction_snapshots@shorthand.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"Foo { bar };\")"
---
SOURCE_FILE@0..12
  EXPR_STMT@0..12
    CONSTRUCT_EXPR@0..11
      PATH@0..4
        PATH_SEGMENT@0..4
          PATH_TYPE@0..4
            IDENT@0..3 "Foo"
            WHITESPACE@3..4 " "
      LEFT_BRACE@4..5 "{"
      WHITESPACE@5..6 " "
      FIELD@6..10
        NAME@6..9
          IDENT@6..9 "bar"
        WHITESPACE@9..10 " "
      RIGHT_BRACE@10..11 "}"
    SEMICOLON@11..12 ";"
